Updates for packaging as an app

--- a/capture.html
+++ b/capture.html
@@ -50,6 +50,21 @@
 			padding: 5px;
 		}
 
+		#quit {
+			cursor: pointer;
+			user-select: none;
+			color: white;
+			-webkit-app-region: drag;
+			position: absolute;
+			background: black;
+			left: 0;
+			bottom: 0;
+			width: 150px;
+			height: 20px;
+			text-align: center;
+			padding: 5px;
+		}
+
 		#record {
 			cursor: pointer;
 			user-select: none;
@@ -105,6 +120,9 @@
 		</div>
 		<div id="record">
 			Start Recording
+		</div>
+		<div id="quit">
+			Exit
 		</div>
 		<div id="corner">
 		</div>
