--- a/capture.html
+++ b/capture.html
@@ -158,6 +158,7 @@
 		</div>
 	</div>
 	<div id="startcontrols">
+		<video id="testvideo"></video>
 		<div id="drag">
 			<div class="grip"></div>
 		</div>
