Few more bug fixes and full screen grab

--- a/capture.html
+++ b/capture.html
@@ -30,6 +30,13 @@
 			pointer-events: none;
 		}
 
+		#info {
+			color: white;
+			margin-top: 20px;
+			width: 165px;
+			text-align: center;
+		}
+
 		.optionButton {
 			margin-bottom: 10px;
 			line-height: 20px;
@@ -176,6 +183,9 @@
 			</select>
 			<div id="quit" class="optionButton">
 				Exit
+			</div>
+			<div id="info">
+				Press Shift+Escape to stop recording
 			</div>
 		</div>
 		<div id="counter">
