Add test page for avatar animation

--- a/video.html
+++ b/video.html
@@ -51,6 +51,7 @@
     <body style="margin: 0; width: 100vw; height: 100vh; overflow: hidden;">
         <div id="drag" style="-webkit-app-region: drag;">
         </div>
+       </svg>
         <canvas id="canvas" width="180" height="180" style="border-radius: 50%; object-fit:cover; width: 180px; height: 180px">
         </canvas>
         <div id="controls">
