Fix issues with moving things around. Another attempt at fixing the red box.

--- a/test.html
+++ b/test.html
@@ -224,7 +224,7 @@
         </div>
     </div>
     <div class="subtitle">Create an Avatar at <a href="https://getavataaars.com/">GetAvataaars!</a></div>
-    <div class="subtitle">The avatar must be created with eyes = <code>Default</code> eyes and mouth =
+    <div class="subtitle">The avatar must be created with eyes = <code>Default</code> and mouth =
         <code>Smile</code></a></div>
     <script>
         function copyFrame() {
