Fix issues with new settings

--- a/capture.html
+++ b/capture.html
@@ -249,7 +249,7 @@
 			<select id="camera3" class="optionButton deviceButton">
 			</select>
 			<select id="systemAudio" class="optionButton deviceButton">
-				<option value="yes" selected="true">Record System Audio</option>
+				<option value="yes">Record System Audio</option>
 				<option value="no">No System Audio</option>
 			</select>
 			<select id="countdown" class="optionButton deviceButton">
